# Instagent

./: .env.example  CLAUDE.md  README.md  baseline.py  bidding.py  blackboard.py  budget.py  circuit_breaker.py  control_panel.html  control_panel.py  council.py  dashboard.py  diversity.py  main.py  orchestrator.py  playbook.py  pyproject.toml  qwen_client.py  reputation.py  schemas.py  smoke_test_tools.py  worker_pool.py
agents/: arbiter.py  base_agent.py  coder.py  critic.py  researcher.py  tools.py  writer.py
workspace/: reverse_string.py  square.py  test_reverse_string.py  test_square.py
