[project]
name = "qwen-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "ruff>=0.15.20",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
